--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "XipingSun/XipingSun.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "images/xiping.png"
   name             : "Xiping Sun"
   pronouns         : # example: "she/her"  
   bio: |-
